# carechat-planer

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: testcase_1.json  testcase_2.json  testcase_3.json  testcase_4.json
scripts/: update_webhook_url.py
src/planer_bot/: __init__.py  aio_webhook_handler.py  careplan_prompt.j2  careplan_prompt_v2.0.j2  config.py  controller.py  gpt.py  main.py  models.py  process_careplan.py  process_secretary.py  repository.py
src/planer_bot/handlers/: follow.py  message.py  misc.py  postback.py
src/planer_bot/templates/: careplan_system_prompt.j2  careplan_user_prompt.j2  secretary_system_prompt.j2
src/planer_bot/views/: flexmessage_list.py  richmenu.py
