[project]
name = "carechat-planer"
version = "0.1.0"
description = ""
authors = [{ name = "hoppiece@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-v3" }
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "line-bot-sdk (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "logzero (>=1.7.0,<2.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "google-cloud-firestore (>=2.20.0,<3.0.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "openai>=1.76.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6,<0.10",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.4,<9",
    "types-requests>=2.32.0.20241016,<3",
]

[tool.hatch.build.targets.sdist]
include = ["src/planer_bot"]

[tool.hatch.build.targets.wheel]
include = ["src/planer_bot"]

[tool.hatch.build.targets.wheel.sources]
"src/planer_bot" = "planer_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

